tfp1/tests/should_fail/Int.hs
module Int where

fac :: Int -> Int
fac 0 = 0
fac n = n * fac (n - 1)





